--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,13 @@
 <resources>
+    <string name="app_title">RHRN</string>
     <string name="app_name">Right Here Right Now</string>
-    <string name="title_activity_maps">Map</string>
+    <string name="title_activity_maps">Map View</string>
     <string name="title_activity_place_details">Place Details</string>
     <string name="title_activity_place_selected">Place Selected</string>
-    <string name="title_activity_List_Places">List of POI</string>
+    <string name="title_activity_List_Places">List View</string>
+    <string name="title_activity_Image_Gallery">Attendee Post Gallery</string>
+    <string name="title_activity_Full_Image_Activity">Attendee Post</string>
+    <string name="title_activity_Search">Search POIs</string>
     <string name="action_settings">Settings</string>
     <string name="section_format">Hello World from section: %1$d</string>
     <string name="add_fav">Add To Favs</string>
