--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,11 +5,11 @@
     <string name="title_activity_place_details">Place Details</string>
     <string name="title_activity_place_selected">Place Selected</string>
     <string name="title_activity_List_Places">List View</string>
-    <string name="title_activity_Image_Gallery">Attendee Post Gallery</string>
-    <string name="title_activity_Full_Image_Activity">Attendee Post</string>
+    <string name="title_activity_Image_Gallery">Attendee Image Gallery</string>
+    <string name="title_activity_Full_Image_Activity">Attendee Image</string>
     <string name="title_activity_Search">Search POIs</string>
+    <string name="title_activity_Comments">Attendees Are Saying...</string>
     <string name="action_settings">Settings</string>
-    <string name="section_format">Hello World from section: %1$d</string>
     <string name="add_fav">Add To Favs</string>
     <string name="remove_fav">Remove From Favs</string>
 </resources>
